--- a/style.scss
+++ b/style.scss
@@ -37,11 +37,11 @@ body {
              }
 
          }
-     }//ul
- }//grobalNav
+     }
+ }
 
 
-}//header
+}
 
 
 
@@ -63,4 +63,4 @@ body {
 
 
 
-}//body
+}
