--- a/style.scss
+++ b/style.scss
@@ -4,11 +4,14 @@ body {
     font-family: 'arial','Hiragino Sans','Meiryo','sans-serif';
     color: #333333;
 
+        
+      
 
 
     header {
         width: 1240px;
         margin: 0 auto 44px;
+      
 
         h1 {
             text-align: center;
@@ -83,6 +86,27 @@ body {
                 section {
                     margin-bottom: 50px;
                 }
+
+
+                .kadomaru {
+                    width:200px;
+                    font-size:15px;
+                    color:#FFFFFF;
+                    text-align:center;
+                    display:block;
+                    padding:10px;
+                    background: rgba(6, 128, 133, 0.808);
+                    border-radius: 20px;
+
+                    &:hover {
+                        opacity: 0.3;
+
+                    }
+                  }
+                  
+
+
+
             }
         }
 
@@ -148,3 +172,6 @@ body {
         padding: 14px 10px 20px;
     }
 }
+
+
+
