--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@ body {
     header {
         width: 1240px;
         margin: 0 auto 44px;
+
       
 
         h1 {
@@ -19,6 +20,10 @@ body {
         }
 
         nav {
+
+            
+
+
             ul {
                 display: flex;
                 justify-content: center;
@@ -27,7 +32,6 @@ body {
                 background-color: #e8e7e6;
                 padding: 12px 0px 10px;
                 list-style: none;
-
 
 
                 li {
@@ -54,11 +58,13 @@ body {
         margin: 0 auto 50px;
         display: flex;
         justify-content: space-between;
+        color: white;
+
 
 
         main {
             flex-basis: 500px;
-            background-color: #ffffff;
+            background-color: #413c3c;
             border-radius: 16px;
             padding: 62px 72px 32px 72px;
             box-shadow: 0px 0px 8px rgba(0,0,0,0.16);
@@ -77,7 +83,7 @@ body {
                 }
 
                 h3 {
-                    border-bottom: 2px solid black;
+                    border-bottom: 2px solid white;
                     margin-bottom: 20px;
                     font-size: 28px;
                     font-weight: 600;
@@ -99,7 +105,7 @@ body {
                     border-radius: 20px;
 
                     &:hover {
-                        opacity: 0.3;
+                        opacity: 0.5;
 
                     }
                   }
@@ -162,7 +168,24 @@ body {
                     }
                 }
             }
+
+            .kadomaru {
+                width:300px;
+                font-size:15px;
+                color:#FFFFFF;
+                text-align:center;
+                display:block;
+                padding:10px;
+                background: rgba(6, 128, 133, 0.808);
+                border-radius: 20px;
+
+                &:hover {
+                    opacity: 0.5;
+
+                }
+              }
         }
+
     }
 
     footer {
